<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="35dp">

    <TextView
        android:id="@+id/dialog_result_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_result_good"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/dialog_aciertos"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aciertos"/>
    <TextView
        android:id="@+id/dialog_tiempo"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tiempo"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp">

        <ImageButton
            android:id="@+id/dialog_home"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/home_24px"/>
        <ImageButton
            android:id="@+id/dialog_replay"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/replay_24px"/>
        <ImageButton
            android:id="@+id/dialog_leaderboards"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/format_list_bulleted_24px"/>
    </LinearLayout>

</LinearLayout>