<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExplanationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@android:color/transparent"
            android:id="@+id/left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/chevron_left_24px"
            android:contentDescription="@string/izquierda"
            android:onClick="buttonClicked"/>

        <TextView
            android:id="@+id/explanation_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/regla_general"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/right"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/chevron_right_24px"
            android:contentDescription="@string/derecha"
            android:onClick="buttonClicked"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/explanation_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    </ScrollView>

</LinearLayout>