<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/hiatos_explanation_1"/>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp">
        <TableRow>
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="FD" />

            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="au" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:text="tor" />
        </TableRow>
        <TableRow>
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="DF" />

            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:text="fe" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="ria" />
        </TableRow>
        <TableRow>
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="DD" />

            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="cui" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:text="da" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="do" />
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/hiatos_explanation_2"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp">
        <TableRow>
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="FF" />

            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="o" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="cé" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:text="a" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="no" />
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/hiatos_explanation_3"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp">
        <TableRow>
            <ImageView
                android:gravity="center"
                android:layout_height="50dp"
                android:padding="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/check_circle_24px"
                app:tint="@color/success" />

            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="san" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="dí" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="a" />
        </TableRow>
        <TableRow>
            <ImageView
                android:gravity="center"
                android:layout_height="50dp"
                android:padding="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/cancel_24px"
                app:tint="@color/error" />
            <TextView
                android:textColor="@color/error"
                android:height="50dp"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="san" />
            <TextView
                android:height="50dp"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:breakStrategy="balanced"
                android:gravity="center"
                android:text="dia" />
        </TableRow>
    </TableLayout>
</LinearLayout>